Port d3 plot  page over to Thymeleaf.  Updated algorithms.